# Voxelinity

./: .gitmodules  CMakeLists.txt
assets/shaders/: gbuffer_terrain.frag  gbuffer_terrain.vert  shaders.json
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: main.cpp  pch.h
src/app/: Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  CollisionManager.cpp  CollisionManager.h  Entity.cpp  Entity.h  Noise.cpp  Noise.h  Player.cpp  Player.h  Voxel.cpp  Voxel.h  World.cpp  World.h
src/core/: Application.cpp  Application.h  Input.cpp  Input.h  ThreadPool.cpp  ThreadPool.h  Window.cpp  Window.h
src/events/: Event.h  EventApplication.h  EventDispatcher.cpp  EventDispatcher.h  EventKeyboard.h  EventMouse.h
src/gfx/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  GraphicContext.cpp  GraphicContext.h  GraphicStateGuard.cpp  GraphicStateGuard.h  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
src/ui/: DebugOverlay.cpp  DebugOverlay.h  OptionMenu.cpp  OptionMenu.h  PauseMenu.cpp  PauseMenu.h  UIManager.cpp  UIManager.h  UIWindow.h
src/utils/: Box.h  File.cpp  File.h  Logger.cpp  Logger.h  Time.cpp  Time.h
